Merge win and non-win ALT_CLIENT_ARGS